# spoj

./: ACPC10A  ACPC10A.cc  ADDREV.cpp  AE00.cpp  CANDY  CANDY.cc  CANDY3.cpp  CMakeLists.txt  COINS.cpp  EIGHTS.cpp  FASHION  FASHION.cc  FCTRL.cpp  FCTRL2.cpp  JULKA.cpp  LASTDIG.cpp  NSTEPS.cc  ONP.cpp  PRIME.cpp  README.md  SAMER08F  SAMER08F.cc  TOANDFRO.cpp  a.out  spojQ2.cpp  utils.cpp
practice/: a.out  cpp11test.cc  fibonacci.cpp
