cmake_minimum_required(VERSION 3.7)
project(Spoj)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ACPC10A.cc
        ADDREV.cpp
        CANDY.cc
        FASHION.cc
        FCTRL.cpp
        FCTRL2.cpp
        NSTEPS.cc
        ONP.cpp
        PRIME.cpp
        README.md
        SAMER08F.cc
        utils.cpp TOANDFRO.cpp AE00.cpp LASTDIG.cpp)


add_executable(JULKA JULKA.cpp CANDY3.cpp EIGHTS.cpp)